# aoc2018_Haskell

./: .gitignore  CHANGELOG.md  README.md  aoc2018.cabal
Problem_Statements/days/: day00.md  day00_function_guide.md  day01.md  day01_function_guide.md  day02.md  day02_function_guide.md  day03.md  day03_function_guide.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md  summary_2018.md
app/: Main.hs
bench/: Main.hs
scripts/: part2_fast.py  plot_day01.py  plot_day01_plateaus.py
src/: Day00.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
test/: Day00Spec.hs  Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Day18Spec.hs  Day19Spec.hs  Day20Spec.hs  Day21Spec.hs  Day22Spec.hs  Day23Spec.hs  Day24Spec.hs  Day25Spec.hs  Spec.hs
tutorial/: README.md
tutorial/day1/: README.md
tutorial/day1/src/: Hello.hs
tutorial/day10/: CHANGELOG.md  README.md  sample.txt  tutorial-day10.cabal
tutorial/day10/app/: Main.hs
tutorial/day10/src/AoC/: Parsing.hs  Solver.hs
tutorial/day10/test/: Spec.hs
tutorial/day10/test/AoC/: ParsingSpec.hs  SolverSpec.hs
tutorial/day11/: README.md
tutorial/day2/: NO-MUTATION.md  README.md
tutorial/day2/src/: Counters.hs  Values.hs
tutorial/day3/: README.md
tutorial/day3/src/: Lists.hs
tutorial/day4/: README.md
tutorial/day4/src/: Patterns.hs
tutorial/day5/: README.md
tutorial/day5/src/: Eithers.hs  Maybes.hs
tutorial/day6/: README.md
tutorial/day6/src/: Folds.hs  Strict.hs
tutorial/day7/: README.md
tutorial/day7/src/: Newtype.hs  Records.hs
tutorial/day8/: README.md
tutorial/day8/src/: MapBasics.hs  SetBasics.hs
tutorial/day9/: README.md
tutorial/day9/src/: IOBasics.hs  ReadInput.hs
